--- a/style2.css
+++ b/style2.css
@@ -8,16 +8,32 @@
     padding: 10px;
 }
 #lewy, #glowny, #prawy {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     padding: 10px;
 }
-#helm, #napiersnik, #buty, #bron, #tarcza, #trinket {
+#glowny {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+#helm, #napiersnik, #buty, #bron, #tarcza, #trinket{
     width: 200px;
     height: 150px;
+    border: 2px solid black;
+    box-sizing: border-box;
+    background-color: lightgray;
 }
 #postac{
-    width: 200px;
-    height: 450x;
+    width: 400px;
+    height: 450px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: auto;
 }
 #helm {
     background-color: aqua;
@@ -39,4 +55,66 @@
 }
 #postac {
     background-color: lightgray;
+}
+#inwentarz {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 20px auto;
+    padding: 10px;
+    background-color: #f4f4f4;
+}
+
+#inventory {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+#slot1, #slot2, #slot3, #slot4, #slot5 {
+    width: 150px;
+    height: 150px;
+    border: 2px solid #000;
+}
+#slot1{
+    background-color: red;
+}
+#slot2{
+    background-color: blue;
+}
+#slot3{
+    background-color: green;
+}
+#slot4{
+    background-color: yellow;
+}
+#slot5{
+    background-color: purple;
+}
+header {
+    width: auto;
+    height: 20%;
+}
+
+#logo{
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+}
+
+#napis{
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
+    width: auto;
+    height: 150px;
+}
+footer{
+    text-align: center;
 }
