--- a/style2.css
+++ b/style2.css
@@ -35,6 +35,12 @@
     border-radius: 10px;
     margin: auto;
 }
+
+#awatar{
+    width: 400px;
+    height: 450px;
+}
+
 #helm {
     background-color: aqua;
 }
@@ -117,4 +123,22 @@ header {
 }
 footer{
     text-align: center;
+}
+
+.slot {
+    width: 200px;
+    height: 150px;
+    border: 2px solid black;
+    box-sizing: border-box;
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slot img {
+    max-width: 100%;
+    max-height: 100%;
+    user-select: none;
+    pointer-events: auto;
 }
