--- a/walka.css
+++ b/walka.css
@@ -21,6 +21,59 @@ h2 {
   border: 3px solid black;
 }
 
+/* Awatary i nazwy */
+.avatar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgray;
+  border: 2px solid black;
+  border-radius: 10px;
+  color: #fff;
+  text-shadow: 1px 1px 3px black;
+}
+
+.avatar-name {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.avatar-left {
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+  min-width: 40px;
+  max-width: 400px;
+  min-height: 45px;
+  max-height: 100px;
+  justify-self: center;
+  align-self: center;
+}
+
+.avatar-left img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+}
+
+.avatar-right {
+  grid-column: 6 / 7;
+  grid-row: 2 / 4;
+  min-width: 40px;
+  max-width: 400px;
+  min-height: 45px;
+  max-height: 100px;
+  justify-self: center;
+  align-self: center;
+}
+
+.avatar-right img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+}
+
 #postac, #wrog {
     grid-row: 2 / 4;
     width: 100%;
