--- a/index.css
+++ b/index.css
@@ -12,8 +12,7 @@ body{
     padding: 15px 40px;         /* Większe wymiary */
     border: 1px solid white;               /* Bez obramowania */
     border-radius: 15px;
-    box-sizing: border-box;
-    background-clip: padding-box;       /* Zaokrąglone rogi */
+    box-sizing: border-box;       /* Zaokrąglone rogi */
     cursor: pointer;            /* Rączka po najechaniu */
     margin: 10px;               /* Odstęp między przyciskami */
     transition: transform 0.2s; /* Gładka animacja przy najechaniu */
@@ -23,21 +22,19 @@ body{
 }
 #loginForm, #registerForm {
     background-image: url(photos/wood.jpg);
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;
     padding: 20px;
     border-radius: 20px;
     width: 300px;
     margin: 20px auto;
     color: white;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
 }
 input[type="submit"] {
     all: unset;
     background-image: url(photos/wood.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-clip: padding-box;
     color: white;
     font-size: 20px;
     padding: 15px 40px;
