--- a/index.css
+++ b/index.css
@@ -1,14 +1,65 @@
+body{
+    background-image: url(photos/tlo2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#loguj, #rejestruj, #anulacja{
+    background-image: url(photos/wood.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;               /* Kolor tekstu */
+    font-size: 20px;            /* Większy tekst */
+    padding: 15px 40px;         /* Większe wymiary */
+    border: 1px solid white;               /* Bez obramowania */
+    border-radius: 15px;
+    box-sizing: border-box;       /* Zaokrąglone rogi */
+    cursor: pointer;            /* Rączka po najechaniu */
+    margin: 10px;               /* Odstęp między przyciskami */
+    transition: transform 0.2s; /* Gładka animacja przy najechaniu */
+}
+#loguj:hover, #rejestruj:hover, #anulacja:hover{
+    transform: scale(1.2);     /* Powiększenie przy hoverze */
+}
+#loginForm, #registerForm {
+    background-image: url(photos/wood.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+    border-radius: 20px;
+    width: 300px;
+    margin: 20px auto;
+    color: white;
+}
+input[type="submit"] {
+    all: unset;
+    background-image: url(photos/wood.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    font-size: 20px;
+    padding: 15px 40px;
+    border: 1px solid white !important;
+    border-radius: 15px;
+    cursor: pointer;
+    margin: 10px;
+    box-sizing: border-box;
+    transition: transform 0.2s;
+}
+
+input[type="submit"]:hover {
+    transform: scale(1.2);
+}
+#loginForm input, #registerForm input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+}
 #header {
     width: auto;
     height: 20%;
-}
-
-#logo{
-    display: block;
-    margin-left:auto;
-    margin-right: auto;
-    width: 150px;
-    height: 150px;
 }
 
 #napis{
@@ -22,6 +73,7 @@
 #main{
     width: auto;
     height:60%;
+    text-align: center;
 }
 
 #loginForm {
