--- a/zbrojmistrz.css
+++ b/zbrojmistrz.css
@@ -1,6 +1,10 @@
 body {
   margin: 0;
   font-family: sans-serif;
+  background-image: url(photos/plebsowa_kuznia.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 header {
@@ -26,6 +30,10 @@ header {
   text-align: center;
   justify-content: center;
   align-items: start; /* ważne, żeby nie wymuszać height: 100% */
+  background-color: #333;
+}
+#napisik{
+  color: white;
 }
 
 #sklep > div:not(.zbrojmistrz) > img {
@@ -50,6 +58,7 @@ header {
 .bronie {
   grid-row: 1 / 2;
   grid-column: 1 / span 3;
+  color: white;
 }
 
 .bron-1{ grid-row: 2 / 3; grid-column: 1 / 2; }
@@ -59,6 +68,7 @@ header {
 .tarcze {
   grid-row: 3 / 4;
   grid-column: 1 / span 3;
+  color: white;
 }
 .tarcza-1{grid-row: 4 / 5; grid-column: 1 / 2;}
 .tarcza-2{grid-row: 4 / 5; grid-column: 2 / 3;}
@@ -67,6 +77,7 @@ header {
 .trinkety {
   grid-row: 5 / 6;
   grid-column: 1 / span 3;
+  color: white;
 }
 .trinket-1{grid-row: 6 / 7; grid-column: 1 / 2;}
 .trinket-2{grid-row: 6 / 7; grid-column: 2 / 3;}
@@ -84,6 +95,9 @@ header {
   grid-row: 1 / -1;
   grid-column: 4 / 7;
   background-color: bisque;
+  background-image: url(photos/zbrojmistrz2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .zbrojmistrz img {
