--- a/zbrojmistrz.css
+++ b/zbrojmistrz.css
@@ -107,9 +107,10 @@ header {
 }
 
 .menu-wrapper {
-    position: absolute;
+    position: fixed;
     top: 20px;       /* nie przy krawędzi */
     left: 20px;      /* nie przy krawędzi */
+    z-index: 1000;
 }
 
 #menuToggle {
