--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body{
+    font-family: sans-serif;
     background-image: url(photos/tlo2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
