--- a/walka.css
+++ b/walka.css
@@ -2,6 +2,13 @@
   display: none !important;
 }
 
+body {
+    font-family: sans-serif;
+    background-image: url(photos/arena.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 #napis {
     text-align: center;
 }
@@ -141,7 +148,7 @@ h2 {
 #panel_glowny {
     grid-row: 3 / 6;
     grid-column: 3 / 6;
-    background-color: #e8e8ff;
+    background-color: bisque;
     border: 2px solid black;
     padding: 20px;
     overflow-y: auto;
@@ -176,20 +183,23 @@ h2 {
     align-self: end;
 }
 
-#akcje_walki button {
-    margin: 5px;
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 8px;
-    border: 2px solid black;
-    background-color: #ffe;
-    transition: background-color 0.2s ease;
-    text-align: center;
+#akcje_walki button, #przycisk_walka {
+    background-image: url(photos/wood.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;               /* Kolor tekstu */
+    font-size: 20px;            /* Większy tekst */
+    padding: 15px 40px;         /* Większe wymiary */
+    border: 1px solid white;               /* Bez obramowania */
+    border-radius: 15px;
+    box-sizing: border-box;       /* Zaokrąglone rogi */
+    cursor: pointer;            /* Rączka po najechaniu */
+    margin: 10px;               /* Odstęp między przyciskami */
+    transition: transform 0.2s; /* Gładka animacja przy najechaniu */
 }
 
-#akcje_walki button:hover:not(:disabled) {
-    background-color: #ddf;
+#akcje_walki button:hover:not(:disabled), #przycisk_walka:hover:not(:disabled) {
+    transform: scale(1.2);     /* Powiększenie przy hoverze */
 }
 
 #akcje_walki button:disabled {
@@ -198,9 +208,10 @@ h2 {
 }
 
 .menu-wrapper {
-    position: absolute;
+    position: fixed;
     top: 20px;       /* nie przy krawędzi */
     left: 20px;      /* nie przy krawędzi */
+    z-index: 1000;
 }
 
 #menuToggle {
