Ostatnie poprawki w css, tym razem na serio

--- a/kowal.css
+++ b/kowal.css
@@ -103,6 +103,7 @@ header {
     position: fixed;
     top: 20px;       /* nie przy krawędzi */
     left: 20px;      /* nie przy krawędzi */
+    z-index: 1000;
 }
 
 #menuToggle {
