--- a/style2.css
+++ b/style2.css
@@ -131,7 +131,7 @@ body {
   margin: 10px auto;
   padding: 20px;
   box-sizing: border-box;
-  flex-wrap: wrap; /* Dodaj to jeśli chcesz, by układ się łamał na mniejszych ekranach */
+  flex-wrap: wrap;
 }
 
 /* Grid na sloty */
@@ -233,13 +233,13 @@ footer {
 
 .menu-wrapper {
     position: fixed;
-    top: 20px;       /* nie przy krawędzi */
-    left: 20px;      /* nie przy krawędzi */
+    top: 20px;
+    left: 20px;
     z-index: 1000;
 }
 
 #menuToggle {
-    background-color: #333;  /* ciemnoszary */
+    background-color: #333;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -249,7 +249,7 @@ footer {
 
 #dropdownMenu {
     margin-top: 5px;
-    background-color: #444;  /* nieco jaśniejszy szary */
+    background-color: #444;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.3);
     overflow: hidden;
