--- a/index.css
+++ b/index.css
@@ -8,18 +8,18 @@ body{
     background-image: url(photos/wood.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;               /* Kolor tekstu */
-    font-size: 20px;            /* Większy tekst */
-    padding: 15px 40px;         /* Większe wymiary */
-    border: 1px solid white;               /* Bez obramowania */
+    color: white;
+    font-size: 20px;
+    padding: 15px 40px;
+    border: 1px solid white;
     border-radius: 15px;
-    box-sizing: border-box;       /* Zaokrąglone rogi */
-    cursor: pointer;            /* Rączka po najechaniu */
-    margin: 10px;               /* Odstęp między przyciskami */
-    transition: transform 0.2s; /* Gładka animacja przy najechaniu */
+    box-sizing: border-box;
+    cursor: pointer;
+    margin: 10px;
+    transition: transform 0.2s;
 }
 #loguj:hover, #rejestruj:hover, #anulacja:hover{
-    transform: scale(1.2);     /* Powiększenie przy hoverze */
+    transform: scale(1.2);
 }
 #loginForm, #registerForm {
     background-image: url(photos/wood.jpg);
